☁️ feat(ui): distribution ☁️ (#183)
* swap hostedzone and cert

* creating s3 bucket for ui

* condense build ui step

* clean up

* ui bucket output

* try w so answer

* cf output for ui bucket

* start cf distro

* progress on distro

* more cf config

* more distro progress

* no waf (/month)

* remove geo restrictions

* remove legacy cname

* remove legacy s3 bucket origin

* more config

* custom error response

* viewer cert config

* a couple defaults

* ids

* optional

* optional

* custom origin config

* custom origin config done

* optional

* commented out

* try this

* origin name

* use short form sub

* start connect route 53 record to distro

* record set

* retain users table

* debugging cypress

* close

* debug comments

* change cypress config url

* change s3 bucket

* work on s3 bucket policy

* more progress

* policy doc

* try no public acl

* starting attr

* domain id

* dkim ses records

* finish

* fix identities

* ttl

* update cypress

* extra dev. in tests

* fix domain import

* package name

* ignore type error

* triple equals

* try again

* try arg

* now?

* ignore all

* more

* remove outer exception

* increase timeout

* increase timeout

* try global exception ignore

* fix invalidation path?

* change cf distro for invalidation

* revert invalidation path

* fix docs test?

* env var

* logs

* update ui hostname fxs

* replace domain in api

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -52,6 +52,10 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --ignore=F405,W503,W504,E721 --max-complexity=10 --max-line-length=127 --statistics
+      
+      - name: Write env var
+        run: |
+          echo "DOMAIN=$(basename ${GITHUB_REPOSITORY})" >> $GITHUB_ENV
 
       - name: Run all unit tests
         env:
@@ -78,14 +82,13 @@ jobs:
           EmailUser: ${{ secrets.EMAIL_USER }}
           SignalEmail: ${{ secrets.SIGNAL_EMAIL }}
           EmailPass: ${{ secrets.EMAIL_PASS }}
+          Domain: ${{ env.DOMAIN }}
           StripePriceId: ${{ fromJSON(format('["{0}","{1}"]', secrets.DEV_STRIPE_PRICE_ID, secrets.STRIPE_PRICE_ID))[github.ref_name == 'master'] }}
           StripeSecretKey: ${{ fromJSON(format('["{0}","{1}"]', secrets.DEV_STRIPE_SECRET_KEY, secrets.STRIPE_SECRET_KEY))[github.ref_name == 'master'] }}
           # Webhook signing key secret for endpoint (not for CLI)
           StripeWebhookSecret: ${{ fromJSON(format('["{0}","{1}"]', secrets.DEV_STRIPE_WEBHOOK_SECRET, secrets.STRIPE_WEBHOOK_SECRET))[github.ref_name == 'master'] }}
           S3Bucket: ${{ fromJSON(format('["{0}","{1}"]', secrets.HYPERDRIVE_DEV_BUCKET, secrets.HYPERDRIVE_BUCKET))[github.ref_name == 'master'] }}
           Stage: ${{ fromJSON(format('["{0}","{1}"]', 'dev', 'prod'))[github.ref_name == 'master'] }}
-          CertArn: ${{ fromJSON(format('["{0}","{1}"]', secrets.DEV_CERT_ARN, secrets.CERT_ARN))[github.ref_name == 'master'] }}
-          HostedZoneId: ${{ secrets.HOSTED_ZONE_ID }}
           UserPoolArn: ${{ fromJSON(format('["{0}","{1}"]', secrets.DEV_USER_POOL_ARN, secrets.USER_POOL_ARN))[github.ref_name == 'master'] }}
           UserPoolId: ${{ fromJSON(format('["{0}","{1}"]', secrets.DEV_USER_POOL_ID, secrets.USER_POOL_ID))[github.ref_name == 'master'] }}
           WebClientId: ${{ fromJSON(format('["{0}","{1}"]', secrets.DEV_WEB_CLIENT_ID, secrets.WEB_CLIENT_ID))[github.ref_name == 'master'] }}
@@ -100,7 +103,7 @@ jobs:
           FILE_PREFIX: ${{ fromJSON('["dev-",""]')[github.ref_name == 'master'] }}
         run: |
           echo "
-          Domain=$(basename ${GITHUB_REPOSITORY})
+          Domain=${Domain}
           EmailUser=${EmailUser}
           SignalEmail=${SignalEmail}
           EmailPass=${EmailPass}
@@ -109,8 +112,6 @@ jobs:
           StripeWebhookSecret=${StripeWebhookSecret}
           S3Bucket=${S3Bucket}
           Stage=${Stage}
-          CertArn=${CertArn}
-          HostedZoneId=${HostedZoneId}
           UserPoolId=${UserPoolId}
           WebClientId=${WebClientId}
           UserPoolArn=${UserPoolArn}
