--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -70,33 +70,29 @@ jobs:
           util/aws_exports.sh
           pnpm run swagger
 
-      - name: Build app [dev]
-        run: pnpm run build:ui && echo "AWS_S3_BUCKET=${AWS_S3_BUCKET}" >> $GITHUB_ENV && echo "CF_DISTRO_ID=${CF_DISTRO_ID}" >> $GITHUB_ENV
+      - name: Build app [${{ fromJSON('["dev","prod"]')[github.ref_name == 'master'] }}]
+        run: VITE_APP_DOMAIN="$(basename ${GITHUB_REPOSITORY})" pnpm run build:ui
         env:
-          AWS_S3_BUCKET: ${{ secrets.FORCEPUSH_DEV_BUCKET }}
           VITE_APP_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          VITE_APP_IDENTITY_POOL_ID: ${{ secrets.DEV_IDENTITY_POOL_ID }}
-          VITE_APP_USER_POOL_ID: ${{ secrets.DEV_USER_POOL_ID }}
-          VITE_APP_WEB_CLIENT_ID: ${{ secrets.DEV_WEB_CLIENT_ID }}
-          VITE_APP_OAUTH_DOMAIN: ${{ secrets.DEV_OAUTH_DOMAIN }}
-          CF_DISTRO_ID: ${{ secrets.DEV_CF_DISTRO_ID }}
-          VITE_COVERAGE: true
-        if: ${{ github.ref_name != 'master' }}
+          VITE_APP_IDENTITY_POOL_ID: ${{ fromJSON(format('["{0}","{1}"]', secrets.DEV_IDENTITY_POOL_ID, secrets.IDENTITY_POOL_ID))[github.ref_name == 'master'] }}
+          VITE_APP_USER_POOL_ID: ${{ fromJSON(format('["{0}","{1}"]', secrets.DEV_USER_POOL_ID, secrets.USER_POOL_ID))[github.ref_name == 'master'] }}
+          VITE_APP_WEB_CLIENT_ID: ${{ fromJSON(format('["{0}","{1}"]', secrets.DEV_WEB_CLIENT_ID, secrets.WEB_CLIENT_ID))[github.ref_name == 'master'] }}
+          VITE_APP_OAUTH_DOMAIN: ${{ fromJSON(format('["{0}","{1}"]', secrets.DEV_OAUTH_DOMAIN, secrets.OAUTH_DOMAIN))[github.ref_name == 'master'] }}
+          VITE_COVERAGE: ${{ fromJSON(format('["{0}","{1}"]', true, false))[github.ref_name == 'master'] }}
 
-      - name: Build app [prod]
-        run: pnpm run build:ui && echo "AWS_S3_BUCKET=${AWS_S3_BUCKET}" >> $GITHUB_ENV && echo "CF_DISTRO_ID=${CF_DISTRO_ID}" >> $GITHUB_ENV
+      - name: Get CloudFormation Outputs
+        run: |
+          AWS_S3_BUCKET=$(aws cloudformation describe-stacks --stack-name api-dev --query 'Stacks[0].Outputs[?OutputKey==`UIBucketName`].OutputValue' --output text)
+          CF_DISTRO_ID=$(aws cloudformation describe-stacks --stack-name api-dev --query 'Stacks[0].Outputs[?OutputKey==`UIDistroId`].OutputValue' --output text)
+          echo "AWS_S3_BUCKET=${AWS_S3_BUCKET}" >> $GITHUB_ENV
+          echo "CF_DISTRO_ID=${CF_DISTRO_ID}" >> $GITHUB_ENV
         env:
-          AWS_S3_BUCKET: ${{ secrets.FORCEPUSH_BUCKET }}
-          VITE_APP_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          VITE_APP_IDENTITY_POOL_ID: ${{ secrets.IDENTITY_POOL_ID }}
-          VITE_APP_USER_POOL_ID: ${{ secrets.USER_POOL_ID }}
-          VITE_APP_WEB_CLIENT_ID: ${{ secrets.WEB_CLIENT_ID }}
-          VITE_APP_OAUTH_DOMAIN: ${{ secrets.OAUTH_DOMAIN }}
-          CF_DISTRO_ID: ${{ secrets.CF_DISTRO_ID }}
-        if: ${{ github.ref_name == 'master' }}
-
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          STACK_NAME: ${{ fromJSON(format('["{0}","{1}"]', 'api-dev', 'api'))[github.ref_name == 'master'] }}
+      
       - name: Deploy UI
-        run: aws s3 sync dist s3://${{ env.AWS_S3_BUCKET }} --acl public-read --follow-symlinks --delete
+        run: aws s3 sync dist "s3://${AWS_S3_BUCKET}" --follow-symlinks --delete
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -118,7 +114,7 @@ jobs:
         with:
           record: true
           install: false
-          wait-on: 'https://dev.forcepu.sh'
+          wait-on: 'https://${{ env.AWS_S3_BUCKET }}'
           config-file: cypress.config.ts
           command-prefix: "--"
         env:
