--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FORCEPU.SH",
+  "name": "Algotrade.io",
   "private": true,
   "version": "0.6.2",
   "description": "Vite app for FORCEPU.SH",
@@ -56,7 +56,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^4.0.0",
-    "cypress": "^12.14.0",
+    "cypress": "^13.0.0",
     "cypress-vite": "^1.4.0",
     "less": "^4.1.3",
     "typescript": "^4.9.3",
