--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Algotrade.io",
   "private": true,
   "version": "0.6.2",
-  "description": "Vite app for FORCEPU.SH",
+  "description": "Vite app for Algotrade.io",
   "type": "module",
   "scripts": {
     "dev": "npm run start",
