--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@types/node": "^20.2.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/styled-components": "^5.1.36",
     "@vitejs/plugin-react": "^4.0.0",
     "cypress": "^13.0.0",
     "cypress-vite": "^1.4.0",
