--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -33,18 +33,19 @@ jobs:
         with:
           python-version: '3.14'
       
-      - name: Cache pip dependencies
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+
+      - name: Cache uv dependencies
         uses: actions/cache@v4
         with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          path: ~/.cache/uv
+          key: ${{ runner.os }}-uv-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
-            ${{ runner.os }}-pip-
+            ${{ runner.os }}-uv-
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        run: uv pip install --system -r requirements.txt
 
       - name: Lint with flake8
         run: |
