--- a/src/api/gym/Makefile
+++ b/src/api/gym/Makefile
@@ -1,6 +1,5 @@
 .PHONY: build
 
 build:
-	cd ../.. && uv export --package gym-lambda --no-hashes --no-dev > src/api/gym/requirements.txt
-	pip install -r requirements.txt -t $(ARTIFACTS_DIR)
+	uv export --package gym-lambda --no-hashes --no-dev | uv pip install --system -r - -t $(ARTIFACTS_DIR)
 	cp *.py $(ARTIFACTS_DIR)
