--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,15 @@ show_missing = true
 [tool.ruff]
 target-version = "py314"
 line-length = 88
-exclude = [".aws-sam", ".venv", "*.ipynb"]
+exclude = [
+    ".aws-sam",
+    ".venv",
+    "*.ipynb",
+    "test.py",
+    "fix_account.py", 
+    "send_email.py",
+    "chance_of_profit.py",
+]
 
 [tool.ruff.lint]
 select = [
@@ -64,7 +72,7 @@ ignore = [
 convention = "google"
 
 [tool.ruff.lint.per-file-ignores]
-"**/test/*" = ["ANN", "D", "F405", "F403", "E721", "B007"]
+"**/test/*" = ["ANN", "D", "F405", "F403"]
 
 [tool.ruff.format]
 quote-style = "double"
