--- a/src/api/template.yaml
+++ b/src/api/template.yaml
@@ -486,6 +486,8 @@ Resources:
     Properties:
       CodeUri: gym
       Handler: app.get_exercise_log
+      Layers:
+      - !Ref SharedLayer
       Events:
         ExerciseLog:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
