diff build cmds

--- a/src/api/trade/Makefile
+++ b/src/api/trade/Makefile
@@ -1,5 +1,6 @@
-.PHONY: build
+.PHONY: build-TradeFunction build-WebSocketFunction
 
-build:
+# Both TradeFunction and WebSocketFunction use this directory
+build-TradeFunction build-WebSocketFunction:
 	uv export --package trade-lambda --no-hashes --no-dev | uv pip install --system -r - -t $(ARTIFACTS_DIR)
 	cp *.py $(ARTIFACTS_DIR)
