--- a/src/api/subscribe/Makefile
+++ b/src/api/subscribe/Makefile
@@ -1,5 +1,5 @@
-.PHONY: build
+.PHONY: build build-PlansFunction build-SubscribeFunction build-CheckoutFunction build-BillingFunction
 
-build:
-	uv export --package subscribe-lambda --no-hashes --no-dev | uv pip install --system -r - -t $(ARTIFACTS_DIR)
+build build-PlansFunction build-SubscribeFunction build-CheckoutFunction build-BillingFunction:
+	uv export --package subscribe-lambda --no-hashes --no-dev --no-emit-project | uv pip install -r - --target $(ARTIFACTS_DIR) --python-version 3.14
 	cp *.py $(ARTIFACTS_DIR)
