--- a/src/api/gym/pyproject.toml
+++ b/src/api/gym/pyproject.toml
@@ -2,7 +2,4 @@
 name = "gym-lambda"
 version = "0.1.0"
 requires-python = ">=3.14"
-dependencies = ["shared-db", "pandas"]
-
-[tool.uv.sources]
-shared-db = { workspace = true }
+dependencies = ["boto3>=1.34.16", "pynamodb>=5.5.1", "pandas"]
