--- a/src/api/model/pyproject.toml
+++ b/src/api/model/pyproject.toml
@@ -2,7 +2,4 @@
 name = "model-lambda"
 version = "0.1.0"
 requires-python = ">=3.14"
-dependencies = ["shared-core", "numpy>=1.26.0"]
-
-[tool.uv.sources]
-shared-core = { workspace = true }
+dependencies = ["boto3>=1.34.16", "numpy>=1.26.0"]
