--- a/src/api/notify/Makefile
+++ b/src/api/notify/Makefile
@@ -1,5 +1,5 @@
-.PHONY: build
+.PHONY: build build-NotifyFunction
 
-build:
-	uv export --package notify-lambda --no-hashes --no-dev | uv pip install --system -r - -t $(ARTIFACTS_DIR)
+build build-NotifyFunction:
+	uv export --package notify-lambda --no-hashes --no-dev --no-emit-project | uv pip install -r - --target $(ARTIFACTS_DIR) --python-version 3.14
 	cp *.py $(ARTIFACTS_DIR)
