--- a/src/api/notify/pyproject.toml
+++ b/src/api/notify/pyproject.toml
@@ -3,10 +3,8 @@ name = "notify-lambda"
 version = "0.1.0"
 requires-python = ">=3.14"
 dependencies = [
-    "shared-db",
+    "boto3>=1.34.16",
+    "pynamodb>=5.5.1",
     "jinja2>=3.1.2",
     "requests>=2.28.1",
 ]
-
-[tool.uv.sources]
-shared-db = { workspace = true }
