--- a/src/api/signals/Makefile
+++ b/src/api/signals/Makefile
@@ -1,5 +1,5 @@
-.PHONY: build
+.PHONY: build build-SignalsFunction
 
-build:
-	uv export --package signals-lambda --no-hashes --no-dev | uv pip install --system -r - -t $(ARTIFACTS_DIR)
+build build-SignalsFunction:
+	uv export --package signals-lambda --no-hashes --no-dev --no-emit-project | uv pip install -r - --target $(ARTIFACTS_DIR) --python-version 3.14
 	cp *.py $(ARTIFACTS_DIR)
