--- a/src/api/trade/Makefile
+++ b/src/api/trade/Makefile
@@ -2,5 +2,5 @@
 
 # Both TradeFunction and WebSocketFunction use this directory
 build-TradeFunction build-WebSocketFunction:
-	uv export --package trade-lambda --no-hashes --no-dev | uv pip install --system -r - -t $(ARTIFACTS_DIR)
+	uv export --package trade-lambda --no-hashes --no-dev --no-emit-project | uv pip install -r - --target $(ARTIFACTS_DIR) --python-version 3.14
 	cp *.py $(ARTIFACTS_DIR)
