--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "forcepush": {
+    "algotrade.io": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
