--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -2,7 +2,7 @@
   "providers": [
     "awscloudformation"
   ],
-  "projectName": "forcepush",
+  "projectName": "algotrade.io",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
@@ -10,8 +10,8 @@
     "config": {
       "SourceDir": "src",
       "DistributionDir": "dist",
-      "BuildCommand": "npm run build",
-      "StartCommand": "npm start"
+      "BuildCommand": "pnpm run build",
+      "StartCommand": "pnpm start"
     }
   }
 }
