--- a/package.json
+++ b/package.json
@@ -5,30 +5,17 @@
   "description": "Vite app for Algotrade.io",
   "type": "module",
   "scripts": {
-    "dev": "npm run start",
+    "dev": "pnpm run start",
     "typescript": "tsc",
-    "build:ui": "pnpm run swagger && NODE_OPTIONS=--max-old-space-size=8192 vite build",
+    "build": "pnpm run swagger && NODE_OPTIONS=--max-old-space-size=8192 vite build",
     "preview": "vite preview",
-    "build:api": "cd src/api && sam build --use-container --cached --parallel",
-    "build+start:api": "npm run build:api && npm run start:api",
-    "build+deploy:api": "npm run build:api && npm run deploy:api",
-    "deploy-dev:api": "cd src/api && sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --parameter-overrides $(cat dev-parameters.env) --config-env dev",
-    "deploy:api": "cd src/api && sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --parameter-overrides $(cat parameters.env) --config-env prod",
     "start": "vite",
-    "start:api": "cd src/api && sam local start-api --parameter-overrides $(cat local-parameters.env)",
-    "vite": "npm run start",
-    "start:db": "docker run -d --rm -p 8000:8000 --name db amazon/dynamodb-local",
-    "stop:db": "docker kill --signal=SIGTERM db && sleep 5",
-    "seed:db": "util/seed.sh",
-    "test:api": "bash -ic 'source util/env.sh && make cov'",
-    "test:api+db": "npm run stop:db; npm run start:db && npm run seed:db && npm run test:api && npm run stop:db",
-    "invoke:api": "cd src/api && sam local invoke PreviewFunction --parameter-overrides $(cat parameters.env)",
     "ci": "rm -rf node_modules && pnpm install --frozen-lockfile",
     "amp": "APP_ID=\"${APP_ID}\" ENV=\"${ENV}\" amplify/pull.sh",
     "clean": "rm -rf node_modules && rm -rf src/.umi",
     "swagger": "swagger-cli bundle -o src/api/spec/swagger.json src/api/spec/swagger.yaml",
     "visualize": "vite-bundle-visualizer -t treemap --open -o ${PWD}/stats.html",
-    "test:ui": "dotenv -e config.env -- npx cypress open"
+    "test": "dotenv -e config.env -- npx cypress open"
   },
   "author": "Krish Suchak <suchak.krish@gmail.com>",
   "license": "MIT",
