--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,47 +1,24 @@
 [project]
-name = "algotrade-api"
-version = "0.1.0"
+name = "api"
+version = "1.0.0"
 requires-python = ">=3.14"
-dependencies = [
-    "account-lambda",
-    "contact-lambda",
-    "gym-lambda",
-    "model-lambda",
-    "notify-lambda",
-    "preview-lambda",
-    "signals-lambda",
-    "subscribe-lambda",
-    "trade-lambda",
-]
+dependencies = []
 
 [dependency-groups]
 dev = ["ruff", "pytest", "pytest-xdist", "pytest-cov"]
-
-[tool.uv.sources]
-account-lambda = { workspace = true }
-contact-lambda = { workspace = true }
-gym-lambda = { workspace = true }
-model-lambda = { workspace = true }
-notify-lambda = { workspace = true }
-preview-lambda = { workspace = true }
-signals-lambda = { workspace = true }
-subscribe-lambda = { workspace = true }
-trade-lambda = { workspace = true }
-
-[tool.uv.workspace]
-members = [
-    "src/api/shared-core",
-    "src/api/shared-db",
-    "src/api/account",
-    "src/api/contact",
-    "src/api/gym",
-    "src/api/model",
-    "src/api/notify",
-    "src/api/preview",
-    "src/api/signals",
-    "src/api/subscribe",
-    "src/api/trade",
-]
+# Shared base dependencies
+base = ["boto3>=1.34.16"]
+db = ["boto3>=1.34.16", "pynamodb>=5.5.1"]
+# Lambda-specific dependency groups
+trade = ["boto3>=1.34.16", "robin-stocks>=3.4.0", "python-jose>=3.3.0", "requests>=2.28.1"]
+account = ["boto3>=1.34.16", "pynamodb>=5.5.1", "stripe>=5.0.0"]
+contact = ["boto3>=1.34.16", "pynamodb>=5.5.1"]
+gym = ["boto3>=1.34.16", "pynamodb>=5.5.1", "pandas"]
+model = ["boto3>=1.34.16", "numpy>=1.26.0"]
+notify = ["boto3>=1.34.16", "pynamodb>=5.5.1", "jinja2>=3.1.2", "requests>=2.28.1"]
+preview = ["boto3>=1.34.16", "pynamodb>=5.5.1"]
+signals = ["boto3>=1.34.16", "pynamodb>=5.5.1"]
+subscribe = ["boto3>=1.34.16", "pynamodb>=5.5.1", "stripe>=5.0.0"]
 
 [tool.pytest.ini_options]
 # Parallel execution disabled - tests have sequential dependencies
