--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ subscribe = ["boto3>=1.34.16", "pynamodb>=5.5.1", "stripe>=5.0.0"]
 # Parallel execution disabled - tests have sequential dependencies
 # addopts = "-n auto"
 testpaths = ["src/api/test"]
+pythonpath = ["src/api", "src/api/shared/python"]
 
 [tool.coverage.run]
 source = ["src/api"]
