--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,9 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/ui/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src/ui"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
