--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,12 +23,12 @@ subscribe = ["boto3>=1.34.16", "pynamodb>=5.5.1", "stripe>=5.0.0"]
 [tool.pytest.ini_options]
 # Parallel execution disabled - tests have sequential dependencies
 # addopts = "-n auto"
-testpaths = ["src/api/test"]
+testpaths = ["tests/api"]
 pythonpath = ["src/api", "src/api/shared/python"]
 
 [tool.coverage.run]
 source = ["src/api"]
-omit = ["**/test/*", ".venv/*", "src/api/trade/app.py", "src/api/shared/python/auth.py"]
+omit = ["**/test/*", "**/tests/*", ".venv/*", "src/api/trade/app.py", "src/api/shared/python/auth.py"]
 
 [tool.coverage.report]
 fail_under = 80
