--- a/src/api/samconfig.toml
+++ b/src/api/samconfig.toml
@@ -3,7 +3,7 @@ version = 0.1
 [prod.deploy]
 [prod.deploy.parameters]
 stack_name = "api"
-s3_bucket = "api.forcepu.sh"
+s3_bucket = "api.algotrade.io"
 s3_prefix = "api"
 region = "us-east-1"
 confirm_changeset = true
@@ -14,7 +14,7 @@ image_repository = "092475342352.dkr.ecr.us-east-1.amazonaws.com/api.forcepu.sh"
 [dev.deploy]
 [dev.deploy.parameters]
 stack_name = "api-dev"
-s3_bucket = "api.dev.forcepu.sh"
+s3_bucket = "api.dev.algotrade.io"
 s3_prefix = "api"
 region = "us-east-1"
 confirm_changeset = true
