--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ requires-python = ">=3.14"
 dependencies = []
 
 [dependency-groups]
-dev = ["ruff", "pytest", "pytest-xdist", "pytest-cov"]
+dev = ["ruff", "pytest", "pytest-xdist", "pytest-cov", "ty"]
 # Shared base dependencies
 base = ["boto3>=1.34.16"]
 db = ["boto3>=1.34.16", "pynamodb>=5.5.1"]
@@ -77,3 +77,18 @@ convention = "google"
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
+
+[tool.ty]
+# Type checking is gradual - start with warnings to fix incrementally
+[tool.ty.environment]
+python-version = "3.14"
+extra-paths = ["src/api/shared/python"]
+
+[tool.ty.rules]
+# Ignore third-party import errors since lambdas have different dependency groups
+unresolved-import = "ignore"
+# Start with warnings for gradual adoption - fix these incrementally
+not-subscriptable = "warn"
+invalid-method-override = "warn"
+invalid-argument-type = "warn"
+call-non-callable = "warn"
