--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ source = ["src/api"]
 omit = ["**/test/*", "**/tests/*", ".venv/*", "src/api/trade/app.py", "src/api/shared/python/auth.py"]
 
 [tool.coverage.report]
-fail_under = 80
+fail_under = 85 # increase this to 95%
 show_missing = true
 
 [tool.ruff]
