--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,17 +8,19 @@ dependencies = []
 dev = ["ruff", "pytest", "pytest-xdist", "pytest-cov", "ty"]
 # Shared base dependencies
 base = ["boto3>=1.34.16"]
-db = ["boto3>=1.34.16", "pynamodb>=5.5.1"]
+db = [{include-group = "base"}, "pynamodb>=5.5.1"]
+http = [{include-group = "base"}, "requests>=2.28.1"]
+billing = [{include-group = "db"}, "stripe>=5.0.0"]
 # Lambda-specific dependency groups
-trade = ["boto3>=1.34.16", "robin-stocks>=3.4.0", "python-jose>=3.3.0", "requests>=2.28.1"]
-account = ["boto3>=1.34.16", "pynamodb>=5.5.1", "stripe>=5.0.0"]
-contact = ["boto3>=1.34.16", "pynamodb>=5.5.1"]
-gym = ["boto3>=1.34.16", "pynamodb>=5.5.1", "pandas"]
-model = ["boto3>=1.34.16", "numpy>=1.26.0"]
-notify = ["boto3>=1.34.16", "pynamodb>=5.5.1", "jinja2>=3.1.2", "requests>=2.28.1"]
-preview = ["boto3>=1.34.16", "pynamodb>=5.5.1"]
-signals = ["boto3>=1.34.16", "pynamodb>=5.5.1"]
-subscribe = ["boto3>=1.34.16", "pynamodb>=5.5.1", "stripe>=5.0.0"]
+trade = [{include-group = "http"}, "robin-stocks>=3.4.0", "python-jose>=3.3.0"]
+account = [{include-group = "billing"}]
+contact = [{include-group = "db"}]
+gym = [{include-group = "db"}, {include-group = "http"}, "pandas>=2.2.0"]
+model = [{include-group = "base"}, "numpy>=1.26.0"]
+notify = [{include-group = "db"}, {include-group = "http"}, "jinja2>=3.1.2"]
+preview = [{include-group = "db"}]
+signals = [{include-group = "db"}]
+subscribe = [{include-group = "billing"}]
 
 [tool.pytest.ini_options]
 # Parallel execution disabled - tests have sequential dependencies
